--- a/15331111.胡子昂.project1/.vscode/settings.json
+++ b/15331111.胡子昂.project1/.vscode/settings.json
@@ -1,17 +1,13 @@
 {
     "files.associations": {
-        "iostream": "cpp",
-        "__locale": "cpp",
-        "memory": "cpp",
-        "utility": "cpp",
         "ios": "cpp",
         "__bit_reference": "cpp",
+        "__tree": "cpp",
         "initializer_list": "cpp",
         "iterator": "cpp",
+        "map": "cpp",
         "string": "cpp",
         "string_view": "cpp",
-        "__tree": "cpp",
-        "map": "cpp"
-    },
-    "C_Cpp.errorSquiggles": "Disabled"
+        "cmath": "cpp"
+    }
 }
